cmake_minimum_required(VERSION 3.17)
project(PROYECTO__1_v1_0)

set(CMAKE_CXX_STANDARD 17)

add_executable(PROYECTO__1_v1_0 main.cpp Producto.cpp Producto.h Articulo.cpp Articulo.h Servicio.cpp Servicio.h Caja.cpp Caja.h Inventario.cpp Inventario.h Fecha.cpp Fecha.h IVendedor.cpp IVendedor.h IAdministrador.cpp IAdministrador.h MenuPrincipal.cpp MenuPrincipal.h MenuVenta.cpp MenuVenta.h MenuAdministrador.cpp MenuAdministrador.h)